<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">复合多功能IC卡</string>
    <string name="app_name">复合多功能IC卡演示程序</string>
    <string name="ElectricMoney">电子现金</string>
    <string name="NewUKey">二代UKEY</string>
    <string name="DynamicOrder">动态口令</string>
    <string name="APDUTest">APDU指令测试</string>
    <string name="CardOP">卡操作</string>
    <string name="PublicKey">公私钥/证书</string>
    <string name="send">发送</string>
    <string name="returnmain">返回主界面</string>
    <string name="exit">退出</string>
    <string name="APDUStep1">1.卡测试</string>
    <string name="APDUStep2">2.APDU测试</string>
    <string name="APDUTest3">3.请点击发送按钮</string>
    <string name="ReturnData">Data：</string>
    <string name="ReturnSw">SW：</string>
    <string name="Read">读8字节随机数</string>
    <string name="Write">写3字节卡数据</string>
    <string name="ProbeCard">探卡</string>
    <string name="ResetCard">卡上电复位</string>
    <string name="Powerdown">卡掉电</string>
    <string name="ElectricMoneyLable">本演示利用屏幕显示金额</string>
    <string name="ElectricMoneyStep1">一. 输入充值金额（0--10000），点充值按钮，可在可视卡屏幕显示充值金额</string>
    <string name="ElectricMoneyStep2">二. 按下可视卡上的按钮显余额</string>
    <string name="ElectricMoneyStep3">三. 输入消费金额（0--10000），点消费按钮，可在可视卡屏幕显示消费金额</string>
    <string name="ElectricMoneyStep4">四. 按下可视卡上的按钮显示余额</string>
    <string name="Recharge">充值</string>
    <string name="Consume">消费</string>
    <string name="CardBanlance">卡上余额为：</string>
    <string name="Null"/>
    <string name="Login">登录</string>
    <string name="OTPAccount">账户：</string>
    <string name="OTPPin">登录密码：</string>
    <string name="PublicKeyLable">公私钥/签名</string>
    <string name="PublicKeyStep1">一 产生公私钥。私钥卡内保留，公钥输出到下面的对话框</string>
    <string name="PublicKeyStep2">二 对输入数据使用私钥进行签名</string>
    <string name="InputData">输入数据：</string>
    <string name="GeneratePublicKey">生成公钥</string>
    <string name="SignedData">公钥/签名</string>
    <string name="DigitalSigned">数字签名</string>
    <string name="ProcessStatus">操作状态</string>
    <string name="NewUkeyReadMe">本演示为一个转账交易的实例，利用可视卡上的屏幕和按钮实现二代UKey功能，防止网银交易数据在网页或传输到UKey过程中被篡改</string>
    <string name="NewUkeyStep1">一 输入转账交易的关键数据</string>
    <string name="SrcAccount">10位用户帐号</string>
    <string name="DstAccount">10位目的帐号</string>
    <string name="RechargeNum">转账金额</string>
    <string name="SendDataToCard">交易数据提交可视卡</string>
    <string name="NewUkeyStep2">二 用户转账交易的数据传输到卡上后，卡中会生成验证图片和一次性验证码，并显示到网银页面上。     用户现在请确认下面图片中的交易信息是否和输入的相同，然后请确认下面图片中的校验码与可视卡屏幕上的数据是否相同。如果以上信息全部相同，则可确认交易数据安全。</string>
    <string name="NewUkeyStep3">三 用户确认数据无误，按可视卡的按钮完成交易</string>
    <string name="BanlanceCash">卡中余额</string>
    <string name="newukeyRSAkeypair">一 产生公私钥对，私钥保留，公钥输出显示</string>
    <string name="newukeyconfirm">三 确认图片显示信息和实际交易是否一致</string>
    <string name="newukeyenter">二 输入目的帐户和转账金额</string>
    <string name="banlance">00000</string>
    <string name="returndata">返回数据：</string>
    <string name="disRSA">RSA公钥显示</string>
    <string name="readBanlance">读余额</string>
    <string name="otp">OTP</string>
    <string name="cardtest">卡测试</string>
    <string name="test">名字起长点就是为了测试</string>
    <string name="action_settings">VisualCard</string>
    <string name="tagInfo">标签信息</string>
    <string name="ChallengeCode">挑战码</string>
    <string name="Responese">应答码</string>
    <string name="GenerateChallenge">生成挑战码</string>
    <string name="InputCardNum">请输入卡上显示的数字</string>
    <string name="JBD">JBDDemo</string>

</resources>